# api/openapi/bundled.yaml
@@ -230,6 +230,52 @@ paths:
               $ref: '#/components/schemas/Models.RegisterPlayerRequest'
       security:
         - {}
+  /bucket/{prefix}:
+    delete:
+      operationId: Images_deleteBucket
+      summary: バケット内のファイルを全て削除する
+      description: バケット内のファイルを全て削除する
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Models.SuccessResponse'
+        '400':
+          description: 400 Bad Request エラーレスポンス
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Models.BadRequestResponse'
+        '401':
+          description: 401 Unauthorized エラーレスポンス
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Models.UnauthorizedResponse'
+        '404':
+          description: 404 Not Found エラーレスポンス
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Models.NotFoundResponse'
+        '500':
+          description: 500 Internal Server Error エラーレスポンス
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Models.InternalServerErrorResponse'
+      tags:
+        - Images
+      security:
+        - BearerAuth: []
   /events/{room_id}:
     get:
       operationId: Events_connectToEventStream
@@ -338,128 +384,17 @@ paths:
         - Events
       security:
         - BearerAuth: []
-  /health:
+  /file/{path}:
     get:
-      operationId: Health_checkHealth
-      summary: ヘルスチェック
-      description: ヘルスチェック
-      parameters: []
-      responses:
-        '200':
-          description: The request has succeeded.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Models.SuccessResponse'
-        '400':
-          description: 400 Bad Request エラーレスポンス
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Models.BadRequestResponse'
-        '500':
-          description: 500 Internal Server Error エラーレスポンス
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Models.InternalServerErrorResponse'
-      tags:
-        - Health
-      security:
-        - {}
-  /images/match:
-    post:
-      operationId: Images_matchImages
-      summary: 画像マッチングを行う
-      description: 画像マッチングを行う
-      parameters: []
-      responses:
-        '200':
-          description: The request has succeeded.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Models.ImageMatchResponse'
-        '400':
-          description: 400 Bad Request エラーレスポンス
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Models.BadRequestResponse'
-        '401':
-          description: 401 Unauthorized エラーレスポンス
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Models.UnauthorizedResponse'
-        '500':
-          description: 500 Internal Server Error エラーレスポンス
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Models.InternalServerErrorResponse'
-      tags:
-        - Images
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Models.ImageMatchRequest'
-      security:
-        - BearerAuth: []
-  /images/upload:
-    post:
-      operationId: Images_uploadImage
-      summary: 画像をアップロードする
-      description: 画像をアップロードする
-      parameters: []
-      responses:
-        '200':
-          description: The request has succeeded.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Models.ImageUploadResponse'
-        '400':
-          description: 400 Bad Request エラーレスポンス
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Models.BadRequestResponse'
-        '401':
-          description: 401 Unauthorized エラーレスポンス
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Models.UnauthorizedResponse'
-        '500':
-          description: 500 Internal Server Error エラーレスポンス
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Models.InternalServerErrorResponse'
-      tags:
-        - Images
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Routes.FormDataRequest'
-      security:
-        - BearerAuth: []
-  /images/{image_id}:
-    get:
-      operationId: Images_getImage
-      summary: 画像を取得する
-      description: 画像を取得する
+      operationId: Images_getFile
+      summary: ファイルを取得する
+      description: ファイルを取得する
       parameters:
-        - name: image_id
+        - name: path
           in: path
           required: true
           schema:
-            $ref: '#/components/schemas/Models.UUID'
+            type: string
       responses:
         '200':
           description: The request has succeeded.
@@ -496,24 +431,23 @@ paths:
         - Images
       security:
         - BearerAuth: []
-  /images/{image_id}/features:
-    get:
-      operationId: Images_getImageFeatures
-      summary: 画像特徴を取得する
-      description: 画像特徴を取得する
+    delete:
+      operationId: Images_deleteFile
+      summary: ファイルを削除する
+      description: ファイルを削除する
       parameters:
-        - name: image_id
+        - name: path
           in: path
           required: true
           schema:
-            $ref: '#/components/schemas/Models.UUID'
+            type: string
       responses:
         '200':
           description: The request has succeeded.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Models.ImageFeatures'
+                $ref: '#/components/schemas/Models.SuccessResponse'
         '400':
           description: 400 Bad Request エラーレスポンス
           content:
@@ -542,24 +476,48 @@ paths:
         - Images
       security:
         - BearerAuth: []
-  /images/{image_id}/info:
+  /health:
     get:
-      operationId: Images_getImageInfo
-      summary: 画像情報を取得する
-      description: 画像情報を取得する
-      parameters:
-        - name: image_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/Models.UUID'
+      operationId: Health_checkHealth
+      summary: ヘルスチェック
+      description: ヘルスチェック
+      parameters: []
       responses:
         '200':
           description: The request has succeeded.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Models.Image'
+                $ref: '#/components/schemas/Models.SuccessResponse'
+        '400':
+          description: 400 Bad Request エラーレスポンス
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Models.BadRequestResponse'
+        '500':
+          description: 500 Internal Server Error エラーレスポンス
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Models.InternalServerErrorResponse'
+      tags:
+        - Health
+      security:
+        - {}
+  /list:
+    get:
+      operationId: Images_listFiles
+      summary: ファイル一覧を取得する
+      description: ファイル一覧を取得する
+      parameters: []
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Models.FileListResponse'
         '400':
           description: 400 Bad Request エラーレスポンス
           content:
@@ -572,12 +530,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Models.UnauthorizedResponse'
-        '404':
-          description: 404 Not Found エラーレスポンス
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Models.NotFoundResponse'
         '500':
           description: 500 Internal Server Error エラーレスポンス
           content:
@@ -1394,6 +1346,47 @@ paths:
               $ref: '#/components/schemas/Models.UpdateRoomSettingsRequest'
       security:
         - BearerAuth: []
+  /upload:
+    post:
+      operationId: Images_uploadImage
+      summary: 画像をアップロードする
+      description: 画像をアップロードする
+      parameters: []
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Models.ImageUploadResponse'
+        '400':
+          description: 400 Bad Request エラーレスポンス
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Models.BadRequestResponse'
+        '401':
+          description: 401 Unauthorized エラーレスポンス
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Models.UnauthorizedResponse'
+        '500':
+          description: 500 Internal Server Error エラーレスポンス
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Models.InternalServerErrorResponse'
+      tags:
+        - Images
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Routes.FormDataRequest'
+      security:
+        - BearerAuth: []
 components:
   schemas:
     ApiVersion:
@@ -1586,6 +1579,43 @@ components:
         - $ref: '#/components/schemas/Models.RoundEndedEvent'
         - $ref: '#/components/schemas/Models.TimerUpdateEvent'
       description: イベントの共用体型
+    Models.FileListResponse:
+      type: object
+      required:
+        - objects
+        - truncated
+      properties:
+        objects:
+          type: array
+          items:
+            $ref: '#/components/schemas/Models.FileObject'
+          description: オブジェクトリスト
+        truncated:
+          type: boolean
+          description: 切り捨てられたかどうか
+      description: ファイル一覧レスポンス
+    Models.FileObject:
+      type: object
+      required:
+        - key
+        - uploaded
+        - size
+        - etag
+      properties:
+        key:
+          type: string
+          description: キー
+        uploaded:
+          type: string
+          description: 最終更新日時
+        size:
+          type: integer
+          format: int32
+          description: サイズ
+        etag:
+          type: string
+          description: etag
+      description: ファイルオブジェクト
     Models.ForbiddenResponse:
       type: object
       required:
@@ -1619,6 +1649,15 @@ components:
       allOf:
         - $ref: '#/components/schemas/Models.EventBase'
       description: ゲームマスター変更イベント
+    Models.HealthResponse:
+      type: object
+      required:
+        - status
+      properties:
+        status:
+          type: string
+          description: ステータス
+      description: ヘルスレスポンス
     Models.HintRevealedEvent:
       type: object
       required:
@@ -1738,16 +1777,11 @@ components:
     Models.ImageUploadResponse:
       type: object
       required:
-        - image_id
-        - url
+        - path
       properties:
-        image_id:
-          allOf:
-            - $ref: '#/components/schemas/Models.UUID'
-          description: 画像ID
-        url:
+        path:
           type: string
-          description: 画像URL
+          description: ストレージパス
       description: 画像アップロードレスポンス
     Models.InternalServerErrorResponse:
       type: object
@@ -2507,10 +2541,24 @@ components:
         body:
           type: object
           properties:
-            file:
+            image:
               type: object
+            w:
+              type: integer
+              format: int32
+            h:
+              type: integer
+              format: int32
+            q:
+              type: integer
+              format: int32
+            f:
+              type: string
+            filename:
+              type: string
           required:
-            - file
+            - image
+            - filename
     Routes.PhotoFormDataRequest:
       type: object
       required:
